--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -19,13 +19,14 @@ a:visted {
 	list-style-type: none;
 	margin-right: auto;
 	margin-left: auto;
+	padding-bottom:2.5em;
 	padding-left: 50px;
 	width: 60%;
 	height: auto;
 }
 
 #sortable li {
-	text-align:left;
+	text-align: left;
 	margin: 5px 10px 10px 10px;
 	padding: 1px;
 	float: left;
@@ -39,6 +40,27 @@ a:visted {
 	padding-left: 22px;
 	text-decoration: none;
 	color: #009c04;
+}
+
+#trashContainer {
+	position: absolute;
+	top:100px;
+	width: 100%;
+	text-align: center
+}
+
+#trash {
+	list-style-type: none;
+	margin: 0 auto 0 auto;
+	background: url(../img/trash.png) no-repeat 0px;
+	height: 130px;
+	width: 120px;
+	opacity:0;
+	padding:0 0 0 0;
+}
+
+#trash li{
+	padding:10px;
 }
 
 #head a {
