--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="SimplePage">
-        <wb-resource deploy-path="/" source-path="/WebContent"/>
-        <property name="context-root" value="SimplePage"/>
+    <wb-module deploy-name="Simple">
+        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <property name="context-root" value="Simple"/>
+        <property name="java-output-path" value="/Simple/build/classes"/>
     </wb-module>
 </project-modules>
