--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -48,7 +48,7 @@ a:visted {
 	width: 100%;
 	text-align: center;
 	opacity: 0;
-	filter:alpha(opacity=0);
+	filter: alpha(opacity = 0);
 }
 
 #trashContainer img {
@@ -102,30 +102,22 @@ a:visted {
 }
 
 /* add div */
-#addContainer {
+#addtip {
 	position: absolute;
-	width: 100%;
-	height: auto;
-	top: 0px;
-	display: none;
-}
-
-.mask {
-	top: 0px;
-	position: fixed;
-	background-color: #666;
-	opacity: 0.3;
-	width: 100%;
-	height: 100%;
-	z-index: -10;
+	width: 700px;
+	top: 100px;
+	text-align: center;
+	opacity: 0;
+	filter: alpha(opacity = 0);
 }
 
 #mysite {
+	display: none;
 	text-align: center;
-	margin: 100px auto 0 auto;
+	margin: 0px auto 0px auto;
 	width: 800px;
 	background: #fff;
-	padding: 50px 0px 400px 30px;
+	padding: 50px 0px 50px 30px;
 }
 
 #mysite .close {
