--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -60,7 +60,7 @@ a:visted {
 	margin: 5px 5px 0px 5px;
 	color: #999;
 	font-size: 16px;
-	height: 52px;
+	height: auto;
 	float: right;
 	text-decoration: none;
 }
